--- a/app/src/main/res/layout/giftcard_information_layout.xml
+++ b/app/src/main/res/layout/giftcard_information_layout.xml
@@ -2,9 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="properties"
             type="dk.android.giifty.model.GiftcardProperties" />
+
+        <import type="dk.android.giifty.utils.Utils" />
+
+        <import type="org.joda.time.DateTime" />
     </data>
 
     <LinearLayout
@@ -54,7 +59,7 @@
                 android:hint="@string/comment"
                 android:imeOptions="actionNext"
                 android:inputType="textCapSentences"
-                android:text="@{properties.description}" />
+                android:text="@={properties.description}" />
         </android.support.design.widget.TextInputLayout>
 
         <RelativeLayout
@@ -86,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:text="@={properties.expirationDate}"
+                android:text="@{Utils.formatTime(properties.expirationDate)}"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="18sp"
                 android:textStyle="normal" />
