--- a/app/src/main/res/layout/activity_price_and_description.xml
+++ b/app/src/main/res/layout/activity_price_and_description.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
-    <dk.android.giifty.components.GiftcardInformationView
-        android:id="@+id/giftcard_information_id"
+
+    <data>
+        <variable
+            name="properties"
+            type="dk.android.giifty.model.GiftcardProperties" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <dk.android.giifty.components.GiftcardInformationView
+            android:id="@+id/giftcard_information_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            bind:properties="@{properties}"/>
+    </LinearLayout>
+</layout>
