--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -16,22 +17,27 @@
             name="company"
             type="dk.android.giifty.model.Company" />
 
+        <variable
+            name="busy"
+            type="android.databinding.ObservableBoolean" />
+
         <import type="dk.android.giifty.utils.Utils" />
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+
         tools:context="dk.android.giifty.ReviewActivity">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,7 +48,7 @@
                     android:id="@+id/textView16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gennemgang af oplysninger"
+                    android:text="@string/walk_trough_overview"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
@@ -53,29 +59,16 @@
                     android:text="@{company.name}"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <LinearLayout
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager_id"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="0dp"
-
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-                </LinearLayout>
+                    android:layout_height="wrap_content" />
 
                 <dk.android.giifty.components.GiftcardInformationView
                     android:id="@+id/giftcard_information_id"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    bind:properties="@{request.properties}"/>
 
 
                 <android.support.design.widget.TextInputLayout
@@ -97,9 +90,8 @@
             </LinearLayout>
         </ScrollView>
 
-        <dk.android.giifty.components.SpinnerLayout
-            android:id="@+id/spinner_layout_id"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <include
+            layout="@layout/progress_layout"
+            bind:busy="@{busy}" />
     </RelativeLayout>
 </layout>
