--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -62,6 +62,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/view_pager_id"
                     android:layout_width="match_parent"
+                    android:minHeight="150dp"
                     android:layout_height="wrap_content" />
 
                 <dk.android.giifty.components.GiftcardInformationView
