--- a/app/src/main/res/layout/giftcard_information_layout.xml
+++ b/app/src/main/res/layout/giftcard_information_layout.xml
@@ -29,7 +29,7 @@
                 android:hint="@string/value"
                 android:imeOptions="actionNext"
                 android:inputType="number"
-                android:text="@={properties.value}" />
+                android:text="@={properties.valueDataBinding}" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -44,7 +44,7 @@
                 android:hint="@string/your_price"
                 android:imeOptions="actionNext"
                 android:inputType="number"
-                android:text="@={properties.price}" />
+                android:text="@={properties.priceDataBinding}" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
