--- a/app/src/main/res/layout/activity_create_barcode.xml
+++ b/app/src/main/res/layout/activity_create_barcode.xml
@@ -1,37 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CreateBarcodeActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/barcode_view_id"
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="canGoToNext"
+            type="android.databinding.ObservableBoolean" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_no_picture" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".CreateBarcodeActivity">
 
-    <Button
-        android:id="@+id/start_scan_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Start scanning" />
+        <ImageView
+            android:id="@+id/barcode_view_id"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_no_picture" />
 
-    <TextView
-        android:id="@+id/barcode_text_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/barcode_view_id"
-        android:layout_centerHorizontal="true"
-        android:text="Scan stregkoden på dit gavekort."
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        <Button
+            android:id="@+id/start_scan_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="Start scanning"
+            android:visibility="@{!canGoToNext.get() ? View.VISIBLE : View.GONE}" />
 
+        <TextView
+            android:id="@+id/barcode_text_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/barcode_view_id"
+            android:layout_centerHorizontal="true"
+            android:text="Scan stregkoden på dit gavekort."
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-</RelativeLayout>
+        <include
+            android:id="@+id/next_id"
+            layout="@layout/next_step_layout"
+            bind:canGoToNext="@{canGoToNext}" />
+    </RelativeLayout>
+</layout>
