--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -27,65 +27,72 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="dk.android.giifty.ReviewActivity">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/walk_trough_overview"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                <TextView
-                    android:id="@+id/company_name_id"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:text="@{company.name}"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/giftcard_for"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                    <TextView
+                        android:id="@+id/company_name_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:text="@{company.name}"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
+                </LinearLayout>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/view_pager_id"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:minHeight="150dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:minHeight="150dp" />
 
                 <dk.android.giifty.components.GiftcardInformationView
                     android:id="@+id/giftcard_information_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    bind:properties="@{request.properties}"/>
-
+                    bind:properties="@{request.properties}" />
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/test_id"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="12dp">
 
                     <EditText
                         android:id="@+id/account_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:editable="false"
-                        android:hint="@string/your_price"
+                        android:hint="@string/account_nr"
                         android:imeOptions="actionNext"
-                        android:inputType="number"
+                        android:focusable="false"
+                        android:inputType="none"
+                        android:clickable="true"
                         android:text="@{user.accountNumber}" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
