--- a/app/src/main/res/layout/activity_create_barcode.xml
+++ b/app/src/main/res/layout/activity_create_barcode.xml
@@ -10,6 +10,14 @@
         <variable
             name="canGoToNext"
             type="android.databinding.ObservableBoolean" />
+
+        <variable
+            name="pageNumber"
+            type="java.lang.String" />
+
+        <variable
+            name="nextPageText"
+            type="java.lang.String" />
     </data>
 
     <RelativeLayout
@@ -46,9 +54,24 @@
             android:text="Scan stregkoden på dit gavekort."
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <TextView
+            android:id="@+id/number_out_of_id"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="23dp"
+            android:gravity="center_horizontal"
+            android:text="@{pageNumber}"
+            android:textColor="@color/colorPrimary"
+            android:textSize="28sp"
+            android:layout_below="@+id/barcode_text_id"
+            android:layout_centerHorizontal="true" />
+
         <include
             android:id="@+id/next_id"
             layout="@layout/next_step_layout"
-            bind:canGoToNext="@{canGoToNext}" />
+            bind:canGoToNext="@{canGoToNext}"
+            bind:nextPageText="@{nextPageText}" />
     </RelativeLayout>
 </layout>
