--- a/app/src/main/res/layout/activity_price_and_description.xml
+++ b/app/src/main/res/layout/activity_price_and_description.xml
@@ -4,9 +4,24 @@
 
 
     <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="canGoToNext"
+            type="android.databinding.ObservableBoolean" />
+
         <variable
             name="properties"
             type="dk.android.giifty.model.GiftcardProperties" />
+
+        <variable
+            name="pageNumber"
+            type="java.lang.String" />
+
+        <variable
+            name="nextPageText"
+            type="java.lang.String" />
     </data>
 
     <LinearLayout
@@ -22,6 +37,23 @@
             android:id="@+id/giftcard_information_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            bind:properties="@{properties}"/>
+            bind:properties="@{properties}" />
+
+        <TextView
+            android:id="@+id/number_out_of_id"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:text="@{pageNumber}"
+            android:textColor="@color/colorPrimary"
+            android:textSize="28sp" />
+
+        <include
+            android:id="@+id/next_id"
+            layout="@layout/next_step_layout"
+            bind:canGoToNext="@{canGoToNext}"
+            bind:nextPageText="@{nextPageText}" />
     </LinearLayout>
 </layout>
