--- a/app/src/main/res/layout/activity_create_image.xml
+++ b/app/src/main/res/layout/activity_create_image.xml
@@ -12,6 +12,10 @@
             type="android.databinding.ObservableBoolean" />
 
         <variable
+            name="isLoadingImage"
+            type="android.databinding.ObservableBoolean" />
+
+        <variable
             name="pageNumber"
             type="java.lang.String" />
 
@@ -29,36 +33,34 @@
             android:id="@+id/image_container_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/framelayout_container_id"
+            android:layout_above="@+id/id47"
             android:layout_marginBottom="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_no_picture" />
+
+        <ProgressBar
+            android:id="@+id/image_loader_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent=""
+            android:visibility="@{isLoadingImage.get() ? View.VISIBLE : View.INVISIBLE}" />
 
         <TextView
             android:id="@+id/number_out_of_id"
             style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/image_container_id"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="35dp"
             android:gravity="center_horizontal"
             android:text="@{pageNumber}"
             android:textColor="@color/colorPrimary"
-            android:textSize="28sp"
-            android:layout_alignBottom="@+id/image_container_id"
-            android:layout_centerHorizontal="true" />
+            android:textSize="28sp" />
 
         <RelativeLayout
-            android:id="@+id/framelayout_container_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp">
-
-        </RelativeLayout>
-
-        <RelativeLayout
+            android:id="@+id/id47"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_vertical_margin">
