--- a/app/src/main/res/layout/activity_create_image.xml
+++ b/app/src/main/res/layout/activity_create_image.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="dk.android.giifty.CreateImageActivity">
 
     <data>
 
@@ -24,37 +25,41 @@
             type="java.lang.String" />
     </data>
 
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="dk.android.giifty.CreateImageActivity">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/image_container_id"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/id47"
-            android:layout_marginBottom="5dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_no_picture" />
+            android:layout_marginBottom="70dp"
+            android:layout_marginTop="5dp">
 
-        <ProgressBar
-            android:id="@+id/image_loader_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent=""
-            android:visibility="@{isLoadingImage.get() ? View.VISIBLE : View.INVISIBLE}" />
+            <ImageView
+                android:id="@+id/image_container_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_no_picture" />
+
+            <ProgressBar
+                android:id="@+id/image_loader_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="@{isLoadingImage.get() ? View.VISIBLE : View.INVISIBLE}" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/number_out_of_id"
             style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/image_container_id"
+            android:layout_above="@+id/id47"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="35dp"
-            android:gravity="center_horizontal"
             android:text="@{pageNumber}"
             android:textColor="@color/colorPrimary"
             android:textSize="28sp" />
