--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -41,10 +41,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="dk.android.giifty.ReviewActivity">
 
         <ScrollView
@@ -55,7 +51,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,6 +109,48 @@
                         android:inputType="none"
                         android:text="@{user.accountNumber}" />
                 </android.support.design.widget.TextInputLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="15dp"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/image_barcode_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:src="@drawable/barcode_image" />
+
+                    <TextView
+                        android:padding="3dp"
+                        android:id="@+id/barcode_text_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="22dp"
+                        android:background="@color/white"
+                        android:text="@{request.properties.barcode.barcodeNumber}"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/image_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:onClick="changePicture" />
+
+                <TextView
+                    android:id="@+id/number_out_of_id"
+                    style="@style/TextAppearance.AppCompat.Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="25dp"
+                    android:text="@{pageNumber}"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="28sp" />
 
                 <include
                     android:id="@+id/next_id"
