--- a/app/src/main/res/layout/activity_price_and_description.xml
+++ b/app/src/main/res/layout/activity_price_and_description.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
+            android:layout_marginBottom="65dp"
             android:text="@{pageNumber}"
             android:textColor="@color/colorPrimary"
             android:textSize="28sp" />
