--- a/app/src/main/res/layout/activity_purchase_success.xml
+++ b/app/src/main/res/layout/activity_purchase_success.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dk.android.giifty.PurchaseSuccessActivity">
+    tools:context=".PaymentSuccessActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
