--- a/app/src/main/res/layout/giftcard_gridview_item1.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item1.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/company_image_id"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="130dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_no_picture"
